--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/accommodation_reservation
+spring.datasource.username=user
+spring.datasource.password=user
 
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+server.port=8081
